Revision history for Test-Run-Plugin-ColorSummary

0.0105       Mon May  4 21:11:22 IDT 2009
    * Converted from NEXT.pm to MRO::Compat.

0.0104       Tue Aug 19 22:46:54 IDT 2008
    * Converted to private_backend_plugins().
    * Now depending on Test-Run-CmdLine-0.0110 which has
    private_backend_plugins() .

0.0103       Mon Aug 18 20:35:35 IDT 2008
    * Changed the license in Build.PL from "bsd" to "mit".
    * Changed _initialize() to _init().
        - in accordance to latest Test-Run.
    * Bumped the version numbers of the dependencies.

0.0102       Sat Jun 23 17:02:34 IDT 2007
    * Converted the distribution to Test-Run-Builder.
    * Merged the Test-Run-CmdLine-Plugin-ColorSummary into this distribution.
    Keeping them separated was too much trouble.
        - Bumped its version number.
    * Converted the tests to use the apporpriate "Test::Trap"-based
    classes.

0.0101       Wed Nov  8 14:34:03 IST 2006
    * Added the links in the POD as generated by latest versions of
    Module-Starter.
    * First stable version.

0.0100_03    Thu Oct  5 16:12:23 IST 2006
    * Fixed the annoying problem with the colored error message followed by some
    empty lines.
    * Changed to the new Test-Run interface. (%args -> $args) 
    * Removed a redundant "use" call.
    * Changed the T::R::Obj interface to accept one hash ref, instead of 
      key1 => "value1", key2 => "value2" (%args) arguments.

0.0100_02    Sun Apr 23 23:07:36 IDT 2006
    Now over-riding _handle_runtests_error_text instead of 
    _handle_runtests_error, per the refactoring of Test::Run::Obj.
    
0.0100_01    Thu Apr  6 21:29:56 IDT 2006
    First version, released on an unsuspecting world.
